--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     api:
         build:
           context: .
-          dockerfile: Dockerfile
+          dockerfile: WebAPI/Dockerfile
         ports:
-          - "8080:80"
+          - "7274:7274"
         depends_on:
           - db
 
